Fix spacing in local header with headings
When the local header heading appeared next to a message list it
was causing extra spacing to appear.

This change ensures that when next to a message list component the
spacing is removed.

--- a/assets/stylesheets/components/_local-header.scss
+++ b/assets/stylesheets/components/_local-header.scss
@@ -23,6 +23,12 @@ $_first-element-spacing: $default-spacing-unit * 3;
 
   .c-message-list {
     margin-bottom: $default-spacing-unit;
+
+    &+.grid-row {
+      .c-local-header__heading:first-child {
+        margin-top: 0;
+      }
+    }
   }
 
   .c-entity-search {
